--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="box-container">
 
             <div class="content">
-                <p>copyright &copy; 2023 by <a href="www.softvalore.com">SoftValore</a> | all rights reserved.</p>
+                <p>copyright &copy; 2023 by <a href="https://softvalore.com" >SoftValore</a> | all rights reserved.</p>
             </div>
 
             <div class="logo">
